Configure git on target machine

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,7 @@
 ---
-# defaults file for deploy-keys
+deploy_private_key:           "your_private_key"
+deploy_public_key:            "your_public_key"
+deploy_user:                  "deploy"
+deploy_key_name:              "your_repo_deploy_key"
+deploy_key_full_path:         "/home/{{ deploy_user }}/.ssh/{{ deploy_key_name }}"
+deploy_debugging:             "{{ debugging | default(false) }}"
