--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,30 @@
 ---
-# tasks file for deploy-keys
+- name: "Install user ssh private key"
+  no_log: "{{ not deploy_debugging }}"
+  copy:
+    content: "{{ deploy_private_key }}"
+    dest: "{{ deploy_key_full_path }}"
+    mode: 0600
+    owner: "{{ deploy_user }}"
+
+- name: "Install user ssh public key"
+  no_log: "{{ not deploy_debugging }}"
+  copy:
+    content: "{{ deploy_public_key }}"
+    dest: "{{ deploy_key_full_path }}.pub"
+    mode: 0644
+    owner: "{{ deploy_user }}"
+
+- name: "Set user git email"
+  become_user: "{{ deploy_user }}"
+  git_config:
+    name: "user.email"
+    scope: global
+    value: "{{ deploy_user }}@{{ ansible_fqdn }}"
+
+- name: "Set user git name"
+  become_user: "{{ deploy_user }}"
+  git_config:
+    name: "user.name"
+    scope: global
+    value: "{{ deploy_user }}"
