--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,11 @@
 ---
-deploy_private_key:           "your_private_key"
-deploy_public_key:            "your_public_key"
-deploy_user:                  "deploy"
-deploy_key_name:              "your_repo_deploy_key"
-deploy_key_full_path:         "/home/{{ deploy_user }}/.ssh/{{ deploy_key_name }}"
-deploy_debugging:             "{{ debugging | default(false) }}"
+deploy_user:      "deploy"
+deploy_debugging: "{{ debugging | default(false) }}"
+deploy_key_path:  "/home/{{ deploy_user }}/.ssh"
+deploy_keys:
+  - name:         "your_first_repo_deploy_key_name"
+    private_key:  "your_first_private_key"
+    public_key:   "your_first_public_key"
+  - name:         "your_second_repo_deploy_key_name"
+    private_key:  "your_second_private_key"
+    public_key:   "your_second_public_key"
